# p2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: checklist.md  dev_log.md  knowledge_base.md
src/: capture_dxgi.cpp  capture_dxgi.h  capture_gdi.cpp  capture_gdi.h  display_enum.cpp  display_enum.h  encode_wic.cpp  encode_wic.h  logging.cpp  logging.h  main.cpp  path_utils.cpp  path_utils.h  process_utils.cpp  process_utils.h  time_utils.cpp  time_utils.h  win_helpers.cpp  win_helpers.h
tests/: e2e_smoke.cpp  test_main.cpp
